more work on loading of files and separate iterface code

--- a/IBbasic/IBbasic.UWP/IBbasic.UWP.csproj
+++ b/IBbasic/IBbasic.UWP/IBbasic.UWP.csproj
@@ -96,8 +96,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SaveAndLoadBitmap_UWP.cs" />
-    <Compile Include="SaveAndLoadText_UWP.cs" />
+    <Compile Include="SaveAndLoad_UWP.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
