--- a/IBbasic/IBbasic.Android/IBbasic.Android.csproj
+++ b/IBbasic/IBbasic.Android/IBbasic.Android.csproj
@@ -64,8 +64,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SaveAndLoadBitmap_Android.cs" />
-    <Compile Include="SaveAndLoadText_Android.cs" />
+    <Compile Include="SaveAndLoad_Android.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
