--- a/IBbasic/IBbasic.Android/Properties/AndroidManifest.xml
+++ b/IBbasic/IBbasic.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0.0" package="com.iceblinkengine.ibb.ibbasic" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="0.9.01" package="com.iceblinkengine.ibb.ibbasic" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="15" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<application android:label="IBbasic.Android"></application>
 </manifest>
