--- a/IBbasic/IBbasic.Android/Properties/AndroidManifest.xml
+++ b/IBbasic/IBbasic.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0.04" package="com.iceblinkengine.ibb.ibbasic" android:installLocation="auto" android:versionCode="4">
-	<uses-sdk android:minSdkVersion="19" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0.07" package="com.iceblinkengine.ibb.ibbasic" android:installLocation="auto" android:versionCode="7">
+	<uses-sdk android:minSdkVersion="18" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<application android:label="IBbasic.Android"></application>
