--- a/IBbasic/ElderinStone.iOS/ElderinStone.iOS.csproj
+++ b/IBbasic/ElderinStone.iOS/ElderinStone.iOS.csproj
@@ -340,6 +340,9 @@
     <PackageReference Include="SkiaSharp.Views.Forms">
       <Version>1.60.3</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.SimpleAudioPlayer">
+      <Version>1.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
     <PackageReference Include="Xamarin.Google.iOS.Analytics">
       <Version>3.17.0.3</Version>
