--- a/IBbasic/IBbasic.iOS/IBbasic.iOS.csproj
+++ b/IBbasic/IBbasic.iOS/IBbasic.iOS.csproj
@@ -75,7 +75,7 @@
     <CodesignKey>iPhone Distribution</CodesignKey>
     <CodesignEntitlements>
     </CodesignEntitlements>
-    <CodesignProvision>IBbasicAppStore</CodesignProvision>
+    <CodesignProvision>IBbasic Distribution Profile</CodesignProvision>
     <CodesignExtraArgs />
     <CodesignResourceRules />
     <BuildIpa>true</BuildIpa>
@@ -153,6 +153,9 @@
     </PackageReference>
     <PackageReference Include="SkiaSharp.Views.Forms">
       <Version>1.60.3</Version>
+    </PackageReference>
+    <PackageReference Include="Xam.Plugin.SimpleAudioPlayer">
+      <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
     <PackageReference Include="Xamarin.Google.iOS.Analytics">
