--- a/IBbasic/Raventhal.Android/Raventhal.Android.csproj
+++ b/IBbasic/Raventhal.Android/Raventhal.Android.csproj
@@ -59,6 +59,9 @@
     <PackageReference Include="SkiaSharp.Views.Forms">
       <Version>1.60.3</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.SimpleAudioPlayer">
+      <Version>1.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="27.0.2.1" />
@@ -380,6 +383,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Assets\modules\Raventhal\graphics\tkn_varek.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\modules\Raventhal\battle.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\modules\Raventhal\raventhal.mp3" />
   </ItemGroup>
   <Import Project="..\IBbasic\IBbasic.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
