--- a/IBbasic/Raventhal.iOS/Raventhal.iOS.csproj
+++ b/IBbasic/Raventhal.iOS/Raventhal.iOS.csproj
@@ -298,6 +298,9 @@
     <PackageReference Include="SkiaSharp.Views.Forms">
       <Version>1.60.3</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.SimpleAudioPlayer">
+      <Version>1.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
     <PackageReference Include="Xamarin.Google.iOS.Analytics">
       <Version>3.17.0.3</Version>
@@ -324,7 +327,10 @@
   <ItemGroup>
     <BundleResource Include="Resources\Icon-60%403x.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\modules\Raventhal\battle.mp3" />
+    <EmbeddedResource Include="Assets\modules\Raventhal\raventhal.mp3" />
+  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Assets\modules\Raventhal\graphics\fx_bitsabrainproj.png" />
     <EmbeddedResource Include="Assets\modules\Raventhal\graphics\fx_kavenvomitproj.png" />
