--- a/IBbasic/LanternaExile.Android/LanternaExile.Android.csproj
+++ b/IBbasic/LanternaExile.Android/LanternaExile.Android.csproj
@@ -612,6 +612,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Assets\modules\Lanterna\graphics\prp_charntree.png" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\modules\Lanterna\graphics\ptr_prp_elos.png" />
+  </ItemGroup>
   <Import Project="..\IBbasic\IBbasic.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
