--- a/IBbasic/IBbasic.UWP/IBbasic.UWP.csproj
+++ b/IBbasic/IBbasic.UWP/IBbasic.UWP.csproj
@@ -155,6 +155,9 @@
     <PackageReference Include="SkiaSharp.Views.Forms">
       <Version>1.60.3</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.SimpleAudioPlayer">
+      <Version>1.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.7" />
   </ItemGroup>
