updates to prepare for weekend releases

--- a/IBbasic/ElderinStone.Android/Properties/AndroidManifest.xml
+++ b/IBbasic/ElderinStone.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0.01" package="com.iceblinkengine.ibb.ibbelderinstone">
-    <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="27" />
-    <application android:label="ElderinStone.Android"></application>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0.04" package="com.iceblinkengine.ibb.ibbelderinstone" android:installLocation="auto" android:versionCode="4">
+	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="27" />
+	<application android:label="ElderinStone.Android"></application>
 </manifest>
