--- a/IBbasic/Birthday.iOS/Birthday.iOS.csproj
+++ b/IBbasic/Birthday.iOS/Birthday.iOS.csproj
@@ -217,7 +217,7 @@
     <PackageReference Include="Xam.Plugin.SimpleAudioPlayer">
       <Version>1.1.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
+    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
     <PackageReference Include="Xamarin.Google.iOS.Analytics">
       <Version>3.17.0.3</Version>
     </PackageReference>
